--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,13 +5,13 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.14.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  http: ^0.13.4
+  http:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
@@ -27,14 +27,12 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
-  # fonts:
-  #   - family:
-  #     fonts:
-  #       - asset: fonts/Regular.ttf
-  #       - asset: fonts/Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+
+#  fonts:
+#  - family: vazir-bold
+#    fonts:
+#      - asset: assets/Vazir-Bold.ttf
+#
+#  - family: Vazir-Light
+#    fonts:
+#      - asset: assets/Vazir-Light.ttf
