--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.4.1
 Django==3.2.9
+django-cors-headers==3.10.1
 django-filter==21.1
 django-phonenumber-field==6.0.0
 djangorestframework==3.12.4
