--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   http: ^0.13.4
   percent_indicator: ^3.4.0
   cupertino_icons: ^1.0.2
+  shared_preferences: ^2.0.11
 
 dev_dependencies:
   flutter_test:
