--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ djangorestframework-simplejwt==5.0.0
 idna==3.3
 oauthlib==3.1.1
 phonenumbers==8.12.39
+Pillow==8.4.0
 pycparser==2.21
 PyJWT==2.3.0
 python3-openid==3.2.0
